validation and specification